[package]
name = "flash_rust_ws"
version = "0.2.0"
authors = ["User65k <15049544+User65k@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", default-features = false, features = ["http1", "http2", "server"]}      # HTTP
pin-project = "1.0"
bytes = "1.0.1"
log = "0.4"
log4rs = { version = "1.0.0", default-features = false, features = ["all_components", "config_parsing"] }

#config:
toml = "0.5"        # config files in toml
serde = { version = "1.0", features = ["derive"] }

#main:
tokio = {version = "1.6.0", features = ["fs", "macros", "time", "rt", "rt-multi-thread", "net", "signal", "sync"]}
futures-util = { version = "0.3", default-features = false }
percent-encoding = "2.1.0"
#files:
mime_guess = "2.0.3"
hyper-staticfile = "0.6.0"    # GET+HEAD for Files
#fcgi:
async-fcgi = {version = "0.3", features = ["app_start"], optional = true}
#rproxy
#hyper-reverse-proxy = "0.4"
#https:
tokio-rustls = { version = "0.22.0", optional = true }

#acme-client         # auto hyper_native_tls

#async_compression  # in no BREACH / TIME cases?

md5 = "0.7.0"
rand = "0.8"
lazy_static = "1.4.0"

#websocket
websocket-codec = { version = "0.5", optional = true }
tokio-util = { version = "0.6", features=["codec"], optional = true }
#webdav
xml-rs = { version = "0.6", optional = true }
chrono = { version = "0.4", optional = true }

[target.'cfg(unix)'.dependencies]
users = "0.11.0"

[features]
default = ["tlsrust", "fcgi", "webdav"]
tlsrust = ["tokio-rustls"]
logrot = ["log4rs/background_rotation"]
fcgi = ["async-fcgi"]
websocket = ["websocket-codec", "tokio-util", "futures-util/sink"]
webdav = ["xml-rs", "chrono"]


[[bin]]
name = "flash_rust_ws"

[profile.release]
lto = "fat"
codegen-units = 1
